--- a/frontend/audioplayer.config.html
+++ b/frontend/audioplayer.config.html
@@ -1,69 +1,22 @@
 <div layout="column" layout-padding ng-cloak>
 
-    <md-list ng-cloak>
+    <config-section cl-title="Create player"></config-section>
+    <config-text
+        cl-title="Stream url" cl-model="$ctrl.url"
+    ></config-text>
+    <config-select
+        cl-title="Stream format" cl-model="$ctrl.selectedFormat"
+        cl-options="$ctrl.formats"
+    ></config-select>
+    <config-button
+        cl-icon="" cl-btn-icon="play" cl-btn-label="Start playback"
+        cl-click="$ctrl.play()"
+    ></config-button>
 
-        <!-- generic controls -->
-        <md-list-item>
-            <!-- generic cleep icon, use it as default line icon -->
-            <md-icon md-svg-icon="chevron-right"></md-icon>
-            <p>Play track</p>
-            <md-input-container md-no-float class="md-secondary no-margin" layout="row" layout-align="start center" layout-padding>
-                <div class="no-md-error">
-                    <input ng-model="audioplayerCtl.url" placeholder="Stream url" aria-label="Stream url" class="no-margin">
-                </div>
-            </md-input-container>
-            <md-input-container md-no-float class="md-secondary no-margin" layout="row" layout-align="start center" layout-padding>
-                <md-select ng-model="audioplayerCtl.selectedFormat" aria-label="Select audio format">
-                    <md-option ng-repeat="format in audioplayerCtl.formats" value="{{ format.value }}">
-                        {{ format.label }}
-                    </md-option>
-                </md-select>
-            </md-input-container>
-            <md-input-container md-no-float class="md-secondary no-margin" layout="row" layout-align="start center" layout-padding>
-                <md-button ng-click="audioplayerCtl.play()" class="md-raised md-primary">
-                    <md-tooltip>Start playback</md-tooltip>
-                    <md-icon md-svg-icon="play"></md-icon>
-                </md-button>
-            </md-input-container>
-        </md-list-item>
-
-        <!-- players -->
-        <md-subheader class="md-no-sticky">Players list</md-subheader>
-        <md-list-item ng-if="audioplayerCtl.audioplayerService.players.length===0">
-            <md-icon md-svg-icon="chevron-right"></md-icon>
-            <p>No player running</p>
-        </md-list-item>
-        <md-list-item ng-repeat="player in audioplayerCtl.audioplayerService.players track by player.playeruuid" class="md-2-line">
-            <md-icon md-svg-icon="play" ng-if="player.state==='playing'" ></md-icon>
-            <md-icon md-svg-icon="pause" ng-if="player.state==='paused'"></md-icon>
-            <md-icon md-svg-icon="stop" ng-if="player.state!=='playing' && player.state!=='paused'"></md-icon>
-            <div class="md-list-item-text" ng-if="!player.metadata">
-                <h3>{{ player.playback.resource }}</h3>
-                <p>{{ player.playback.audio_format }}</p>
-            </div>
-            <div class="md-list-item-text" ng-if="player.metadata">
-                <h3>{{ player.metadata.title || 'no title' }}</h3>
-                <p>
-                    {{ player.metadata.artist || 'no artist' }} - {{ player.metadata.album || 'no album' }}
-                </p>
-            </div>
-            <md-input-container md-no-float class="md-secondary no-margin" layout="row" layout-align="start center" layout-padding>
-                <md-button ng-click="audioplayerCtl.pause(player.playeruuid)" class="md-raised md-primary">
-                    <md-tooltip>Toggle play/pause</md-tooltip>
-                    <md-icon md-svg-icon="play-pause"></md-icon>
-                </md-button>
-                <md-button ng-click="audioplayerCtl.stop(player.playeruuid)" class="md-raised md-primary">
-                    <md-tooltip>Stop playback</md-tooltip>
-                    <md-icon md-svg-icon="stop"></md-icon>
-                </md-button>
-                <md-button ng-click="audioplayerCtl.showPlaylist(player.playeruuid, $index)" class="md-raised md-primary">
-                    <md-tooltip>Show player</md-tooltip>
-                    <md-icon md-svg-icon="music-circle"></md-icon>
-                </md-button>
-            </md-input-container>
-        </md-list-item>
-
-    </md-list>
+    <config-section cl-title="Players list"></config-section>
+    <config-list
+        cl-empty="No player running" cl-items="$ctrl.players"
+    ></config-list>
 
 </div>
     
